# px425

./: .gitignore  CMakeLists.txt
Assignment1/: CMakeLists.txt  qho.c
Assignment2/: CMakeLists.txt  Makefile  burgers.c  makePNG.c  makePNG.h  mt19937ar.c  report.bib  report.lyx
Assignment2/Graphs/: data.csv  plot.py
Assignment3/: CMakeLists.txt  Makefile  cluster_search.f90  mt19937ar.c  perc.slurm  percolation.c  percolation1.c  percolation4.c  report.lyx
Assignment4/: CMakeLists.txt  comms.c  comms.h  grid.c  grid.h  makePNG.c  makePNG.h  mt19937ar.c  mt19937ar.h  report.lyx  rfim.c
Assignment5/: CMakeLists.txt  Makefile  comms.c  comms.h  input.c  input.h  mpi_orac.slurm  mt19937ar.h  output.c  output.h  report.lyx  types.c  types.h  wifi.c
Assignment5/Graphs/: first_steps_1.py  first_steps_2.py  times.py
